--- a/003_landing_page_design/src/components/JobTile/JobTile.styles.scss
+++ b/003_landing_page_design/src/components/JobTile/JobTile.styles.scss
@@ -2,19 +2,31 @@
   .job-category {
     font-size: 0.85rem;
     font-weight: 600;
-    color: hsl(0, 0, 50%);
+    color: hsl(0, 0, 27);
+    display: flex;
+    align-items: center;
+
+    .dot {
+      height: 12px;
+      width: 12px;
+      background-color: #bbb;
+      border-radius: 50%;
+      display: inline-block;
+      margin-right: 0.5rem;
+    }
   }
 
   .job-title {
     font-size: 1.1rem;
     font-weight: 700;
-    color: hsl(0, 0, 27%);
+    color: hsl(0, 0, 27);
+    font-family: GilroyBold;
   }
   .job-details {
     display: flex;
     align-items: center;
     font-size: 0.85rem;
     font-weight: 600;
-    color: hsl(0, 0, 50%);
+    color: hsl(0, 0, 50);
   }
 }
