--- a/003_landing_page_design/src/components/SearchBar/SearchBar.styles.scss
+++ b/003_landing_page_design/src/components/SearchBar/SearchBar.styles.scss
@@ -7,18 +7,31 @@
   font-size: 0.85rem;
   font-weight: 500;
   background: white;
-  color: hsl(0, 0, 60);
+  color: hsl(0, 0, 55);
 
   .search-box {
     display: flex;
     justify-content: space-between;
     align-items: center;
     height: 100%;
-    border-right: 1px solid hsl(0, 0, 95);
+    width: 50%;
     padding: 5px;
   }
 
   .search-entry {
-    padding: 0 10px;
+    padding-left: 0;
+    height: 65%;
+    width: 85%;
+    outline: none;
+    border: 0;
+    border-right: 1px solid hsl(0, 0, 95);
+
+    &::placeholder {
+      color: hsl(0, 0, 55);
+    }
+  }
+
+  .search-location-dropdown {
+    width: 30%;
   }
 }
