--- a/003_landing_page_design/src/sections/CategoryGrid/CategoryGrid.styles.scss
+++ b/003_landing_page_design/src/sections/CategoryGrid/CategoryGrid.styles.scss
@@ -5,7 +5,7 @@
   .category-header {
     font-size: 2.3rem;
     font-weight: 900;
-    font-family: Roboto, sans-serif;
+    font-family: GilroyBold;
     text-align: center;
     color: hsl(225, 20, 15);
   }
@@ -14,6 +14,58 @@
 .grid-tiles-container {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 15px;
+  gap: 10px;
   padding: 0 10px;
+}
+
+@media (min-width: 820px) {
+  .grid-container {
+    .internal-wrapper {
+      max-width: 80%;
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      margin: 0 auto;
+
+      .category-header {
+        font-size: 3rem;
+        text-align: left;
+        display: flex;
+        flex-direction: column;
+        letter-spacing: 0.01rem;
+        padding: 5rem 0 2rem 0.5rem;
+      }
+    }
+  }
+
+  .grid-tiles-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 10px;
+
+    .category-tile {
+      height: 200px;
+    }
+  }
+  .last-item {
+    grid-column: span 1;
+  }
+}
+
+@media (min-width: 1100px) {
+  .grid-container {
+    .internal-wrapper {
+      max-width: 70%;
+      margin: 0 auto;
+    }
+  }
+
+  .grid-tiles-container {
+    grid-template-columns: repeat(5, 1fr);
+
+    .category-tile {
+      height: 250px;
+      width: 250px;
+    }
+  }
 }
