--- a/003_landing_page_design/src/sections/Landing/Landing.styles.scss
+++ b/003_landing_page_design/src/sections/Landing/Landing.styles.scss
@@ -1,6 +1,8 @@
 .landing {
   height: 100vh;
   background: hsl(201, 79, 92);
+  min-width: 320px;
+
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -8,13 +10,20 @@
   .caption {
     font-size: 4rem;
     padding-left: 0.5rem;
-    font-weight: 900;
-    font-family: "Roboto", sans-serif;
+    font-family: "GilroyBold";
     line-height: 1.1;
     margin: 0 auto;
+    color: hsl(225, 20, 15);
   }
   .landing-subtitle {
     text-align: center;
+    font-size: 1.1rem;
+    color: hsl(225, 20, 15);
+
+    a {
+      text-decoration: none;
+      color: hsl(240, 70, 50);
+    }
   }
 
   .custom-button {
@@ -25,4 +34,61 @@
 
 .text-highlight {
   color: hsl(240, 70, 50);
+}
+
+@media (min-width: 820px) {
+  .landing {
+    .navbar {
+      justify-content: space-between;
+      font-size: 1rem;
+      background: hsl(201, 80, 91);
+      color: hsl(228, 19, 15);
+      ul {
+        padding: 3rem;
+        padding-inline-start: 3rem;
+
+        li {
+          + li {
+            margin-left: 1rem;
+            padding-left: 1rem;
+
+            border-left: 1px solid hsl(228, 19, 75);
+          }
+          a {
+            color: hsl(228, 19, 15);
+            text-decoration: none;
+          }
+        }
+      }
+    }
+
+    .caption {
+      font-size: 7rem;
+      max-width: 65%;
+    }
+
+    .search-bar {
+      margin: 0 auto;
+      width: 65%;
+      height: 100px;
+      font-size: 1rem;
+
+      .search-entry {
+        padding-left: 3rem;
+        font-size: 1rem;
+        color: hsl(0, 0, 40);
+      }
+    }
+
+    .landing-subtitle {
+      font-size: 1.2rem;
+      color: hsl(225, 20, 35);
+    }
+
+    .custom-button {
+      height: 100px;
+      padding: 0 45px;
+      font-size: 1rem;
+    }
+  }
 }
