Completed Daily UI 006 'User Profile'

--- a/006_user_profile/src/components/Header/Header.styles.scss
+++ b/006_user_profile/src/components/Header/Header.styles.scss
@@ -7,18 +7,20 @@
 
   height: 10vh;
   width: 100%;
-  background: #555;
-  color: white;
+  background: hsl(48, 55, 98);
+  color: hsl(192, 11, 26);
+  font-weight: 600;
+  border: 5px solid hsl(193, 32, 13);
   ul {
     display: flex;
     list-style-type: none;
-    padding-right: 3rem;
+    padding-right: 5rem;
 
     li {
       cursor: pointer;
 
       + li {
-        padding-left: 2rem;
+        padding-left: 5rem;
       }
     }
   }
